# seer_pvp_simulation_system

./: CMakeLists.txt  README.md  report.md
docs/: ARCHITECTURE_REVIEW_AND_DESIGN_PHILOSOPHY.md  architecture-evolution.md  battle-debug.html  battle.html  concurrent-design.md  effect-trigger-timing.md  websocket_bridge.js  命令行客户端使用说明.md  数据库使用与系统映射-交接.md  时点判定流程表.md  机制演示网站理解.md  测试指南.md  训练模式控制块与调度演进建议.md
include/: battle.h  errors.h  server.h
include/abnormal-system/: abnormal-applicator.h  abnormal-state.h  abnormal-types.h  resistance-system.h
include/db/: db_pool.h  db_service.h  mysql_pool.h  mysql_service.h  official_data_repository.h
include/effects/: continuousEffect.h  effect.h  pendingEffect.h
include/entities/: elemental-attributes.h  elf-pet.h  mark.h  numerical-properties.h  pet_factory.h  seer-robot.h  skills.h  soul_mark.h  soul_mark_manager.h
include/fsm/: battleContext.h  battleFsm.h  battleWorkspace.h  iControlBlock.h
include/numerical-calculation/: calculation.h
include/plugin/: plugin_interface.h
include/thread_pool/: boost_thread_pool.h  io_thread_pool.h  thread_pool_base.h
include/utils/: dynamic_library.h
resources/moves_lib/: lib_1.cpp
resources/soul_lib/: lib_1.cpp
src/abnormal-system/: abnormal-applicator.cpp
src/db/: official_data_repository.cpp
src/effects/: continuousEffect.cpp  effect.cpp  pendingEffect.cpp
src/entities/: elemental-attributes.cpp  numerical-properties.cpp  pet_factory.cpp  skills.cpp  soul_mark_manager.cpp
src/fsm/: battleContext.cpp  battleFsm.cpp  iControlBlock.cpp
src/server/: main.cpp  server.cpp
src/utils/: dynamic_library.cpp
tools/: training_cli.cpp
